[gd_scene load_steps=22 format=2]

[ext_resource path="res://custom_classes/dialogue_label.gd" type="Script" id=1]
[ext_resource path="res://sprites/overworld/dialogue_box.png" type="Texture" id=2]
[ext_resource path="res://sprites/faces/asgore_faces.png" type="Texture" id=3]
[ext_resource path="res://fonts/determination.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/bad_ending_epiloge.gd" type="Script" id=5]
[ext_resource path="res://sprites/overworld/throne_asgore_up.png" type="Texture" id=6]
[ext_resource path="res://sprites/overworld/toriel.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 98, 130 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 98, 0, 98, 130 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 196, 0, 98, 130 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 294, 0, 98, 130 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 392, 0, 98, 130 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 490, 0, 98, 130 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 588, 0, 98, 130 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [  ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": false,
"name": "face_asgore0",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": false,
"name": "face_asgore1",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ) ],
"loop": true,
"name": "face_asgore2",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "face_asgore3",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "face_asgore4",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ) ],
"loop": true,
"name": "face_asgore5",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ) ],
"loop": true,
"name": "face_asgore6",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=20]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=29]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialogue_box:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=31]
resource_name = "fade_in"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "fade_out"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialogue_box:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=30]
resource_name = "start"
length = 4.0
tracks/0/type = "method"
tracks/0/path = NodePath("dialogue_box/DialogueLabel")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_dialogue"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialogue_box:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="asgore" type="AnimatedSprite" parent="."]
position = Vector2( 320, 400 )
scale = Vector2( 2, 2 )
frames = SubResource( 21 )

[node name="Toriel" type="Sprite" parent="."]
position = Vector2( 320, 240 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="dialogue_box" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 2 )

[node name="faces" type="AnimatedSprite" parent="dialogue_box"]
position = Vector2( 12, 12 )
frames = SubResource( 22 )
animation = "empty"
centered = false

[node name="DialogueLabel" type="RichTextLabel" parent="dialogue_box"]
anchor_left = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_fonts/normal_font = SubResource( 20 )
text = "where am i"
script = ExtResource( 1 )
messages = [ "BAD_ENDING_EPILOGUE1", "BAD_ENDING_EPILOGUE2", "BAD_ENDING_EPILOGUE3", "BAD_ENDING_EPILOGUE4", "BAD_ENDING_EPILOGUE5", "BAD_ENDING_EPILOGUE6", "BAD_ENDING_EPILOGUE7", "BAD_ENDING_EPILOGUE8", "BAD_ENDING_EPILOGUE9", "BAD_ENDING_EPILOGUE10", "BAD_ENDING_EPILOGUE11", "BAD_ENDING_EPILOGUE12", "BAD_ENDING_EPILOGUE13", "BAD_ENDING_EPILOGUE14", "BAD_ENDING_EPILOGUE15", "BAD_ENDING_EPILOGUE16" ]
player_controlled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 29 )
anims/fade_in = SubResource( 31 )
anims/fade_out = SubResource( 28 )
anims/start = SubResource( 30 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[connection signal="dialogue_custom_event" from="dialogue_box/DialogueLabel" to="." method="_on_DialogueLabel_dialogue_custom_event"]
[connection signal="dialogue_ended" from="dialogue_box/DialogueLabel" to="." method="_on_DialogueLabel_dialogue_ended"]
